--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-server.port=${PORT:8080}
-
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${PGPASSWORD}
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:postgresql://localhost:5432/Diplom
+spring.datasource.username=postgres
+spring.datasource.password=your_password
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+vaadin.launch-browser=true
+spring.application.name=ChronoTask
+server.port=8081
