--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 vaadin.productionMode=true
-vaadin.whitelisted-packages=om.example.ChronoTask
+vaadin.whitelisted-packages=com.example.ChronoTask
 server.port=8080
