--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.show-sql=true
 vaadin.productionMode=true
 vaadin.whitelisted-packages=com.example.ChronoTask
 server.port=8080
+openai.api.key=${OPENAI_API_KEY}
